--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
   "name": "@jinba-ittai/d2c-extension",
-  "displayName": "d2c-extension",
-  "description": "generate code from figma",
+  "displayName": "Design to code",
+  "description": "Generate code from figma",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.105.0"
   },
   "categories": [
-    "Other"
+    "AI"
   ],
   "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "d2c-extension.generate",
-        "title": "hello world"
-      },
-      {
-        "command": "d2c-extension.callCopilot",
-        "title": "generate code"
+        "command": "d2c.generate-screen",
+        "title": "d2c: Generate Screen from Figma"
       }
     ]
   },
@@ -35,17 +31,20 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.105.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
+    "@types/vscode": "^1.105.0",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
-    "eslint": "^9.32.0",
-    "typescript": "^5.9.2",
-    "ts-loader": "^9.5.2",
-    "webpack": "^5.101.0",
-    "webpack-cli": "^6.0.1",
     "@vscode/test-cli": "^0.0.11",
-    "@vscode/test-electron": "^2.5.2"
+    "@vscode/test-electron": "^2.5.2",
+    "eslint": "^9.32.0",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.9.2",
+    "webpack": "^5.101.0",
+    "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.20.2"
   }
 }
