--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.20.2"
+    "@langchain/core": "^1.1.1",
+    "@modelcontextprotocol/sdk": "^1.20.2",
+    "langchain": "^1.1.2"
   }
 }
